# teachme

./: .env.example  .gitignore  README.md  example_simplified_usage.py  pyproject.toml
teachme/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
teachme/agents/: __init__.py  animation.py  base.py  subject_matter.py
teachme/models/: schemas.py
teachme/prompts/: animation.py  subject_matter.py
teachme/utils/: llm_client.py  manim_runner.py  responses_llm_client.py
tests/: test_integration.py  test_manim_runner.py  test_subject_matter_agent.py  test_subject_matter_integration.py
